@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2011 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -57,7 +57,7 @@ public class FoodItemUtil {
 			session.beginTransaction();
 
 			FoodItem foodItem = (FoodItem)session.get(
-				FoodItem.class, new Long(foodItemId));
+				FoodItem.class, Long.valueOf(foodItemId));
 
 			if (foodItem != null) {
 				session.delete(foodItem);
@@ -84,7 +84,7 @@ public class FoodItemUtil {
 			session.beginTransaction();
 
 			FoodItem foodItem = (FoodItem)session.get(
-				FoodItem.class, new Long(foodItemId));
+				FoodItem.class, Long.valueOf(foodItemId));
 
 			session.getTransaction().commit();
 
