@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2011 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -21,16 +21,16 @@ import java.sql.Types;
  */
 public class SVNRevisionTable {
 
-	public static final String TABLE_NAME = "SC_SVNRevision";
-
 	public static final Object[][] TABLE_COLUMNS = {
-		{"svnRevisionId", new Integer(Types.BIGINT)},
-		{"svnUserId", new Integer(Types.VARCHAR)},
-		{"createDate", new Integer(Types.TIMESTAMP)},
-		{"svnRepositoryId", new Integer(Types.BIGINT)},
-		{"revisionNumber", new Integer(Types.BIGINT)},
-		{"comments", new Integer(Types.VARCHAR)}
+		{"svnRevisionId", Integer.valueOf(Types.BIGINT)},
+		{"svnUserId", Integer.valueOf(Types.VARCHAR)},
+		{"createDate", Integer.valueOf(Types.TIMESTAMP)},
+		{"svnRepositoryId", Integer.valueOf(Types.BIGINT)},
+		{"revisionNumber", Integer.valueOf(Types.BIGINT)},
+		{"comments", Integer.valueOf(Types.VARCHAR)}
 	};
+
+	public static final String TABLE_NAME = "SC_SVNRevision";
 
 	public static final String TABLE_SQL_CREATE = "create table SC_SVNRevision (svnRevisionId LONG not null primary key,svnUserId VARCHAR(75) null,createDate DATE null,svnRepositoryId LONG,revisionNumber LONG,comments STRING null)";
 
